_sass/jekyll-theme-prologue.scss
/* ... */
	pre {
		-webkit-overflow-scrolling: touch;
		font-family: "Courier New", monospace;
		font-size: 0.9em;
		tab-size: 4;
		margin: 0 0 2em 0;
		code {
			display: block;
			line-height: 1.5;
			padding: 0.75em 1em;
			overflow-x: auto;
		}
	}

    .CC {
        background: rgba(0, 0, 0, 0.8);
        border-radius: 8px;
    }

	blockquote {
		margin-left: 1em;
		border-left: solid 0.5em #ddd;
		padding: 1em 0 1em 2em;
		font-style: italic;
	}

	p, ul, ol, dl, table {
		margin-bottom: 2em;
	}

	dl {
		dt {
			font-weight: 300;
			color: #666;
		}
		dd {
			margin-left: 1em
		}
	}

	br.clear {
		clear: both;
	}

/* Sections/Article */

	section, article {
		margin-bottom: 3em;

		> :last-child,
		> .container,
		&:last-child,
		> .container > :last-child {
			margin-bottom: 0;
		}

		.row > & {
			margin-bottom: 0;
		}

		.row {
			margin-top: 40px;
		}

		.row > * {
			padding-top: 0;
		}

		ul, ol {
			padding-left: 0.25em;
			margin-left: 1.25em;
		}
	}

/* Image */

	.image {
		display: inline-block;
		border: 0;

		img {
			display: block;
			width: 100%;
		}

		&.avatar48 {
			width: 48px;
			height: 48px;
			// background: #f00;

			img {
				width: 48px;
				height: 48px;
			}
		}

		&.fit {
			display: block;
			width: 100%;
		}

		&.featured {
			display: block;
			width: 100%;
			margin: 0 0 2em 0;
		}

		&.left {
			float: left;
			margin: 0 2em 2em 0;
		}

		&.right {
			float: right;
			margin: 0 0 2em 2em;
		}

		&.centered {
			display: block;
			margin: 0 0 2em 0;

			img {
				margin: 0 auto;
				width: auto;
			}
		}
	}

/* List */

	ul {
		list-style: disc;

		&.icons {
			cursor: default;

			li {
				display: inline-block;
			}

			a {
				display: inline-block;
				width: 2em;
				height: 2em;
				line-height: 2em;
				text-align: center;
				border: 0;
			}
		}
	}

	ol {
		list-style: decimal;
	}

/* Form */

	form {
		label {
			display: block;
			text-align: left;
			margin-bottom: 0.5em;
		}

		input[type="text"],
		input[type="email"],
		input[type="password"],
		select,
		textarea {
			position: relative;
			-webkit-appearance: none;
			display: block;
			border: 0;
			outline: 0;
			background: #fff;
			background: rgba(255, 255, 255, 0.75);
			width: 100%;
			border-radius: 0.35em;
			padding: 0.75em 1em 0.75em 1em;
			box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
			border: solid 1px rgba(0, 0, 0, 0.15);
			@include vendor('transition', 'all 0.35s ease-in-out');

			&:focus {
				box-shadow: 0 0 2px 1px #8ebebc;
				background: #fff;
			}
		}

		input[type="text"],
		input[type="email"],
		input[type="password"],
		select {
			line-height: 1.25em;
		}

		textarea {
			min-height: 14em;
		}

		.formerize-placeholder {
			color: #555 !important;
		}

		::-webkit-input-placeholder {
			color: #555 !important;
		}

		:-moz-placeholder {
			color: #555 !important;
		}

		::-moz-placeholder {
			color: #555 !important;
		}

		:-ms-input-placeholder {
			color: #555 !important;
		}

		::-moz-focus-inner {
			border: 0;
		}
	}

/* Table */

	table {
		width: 100%;
		text-align: left;

		tbody {
			tr {
				&:nth-child(2n+2) {
					background: #f4f4f4;
				}
			}
		}

		td {
			padding: 0.5em 1em 0.5em 1em;
		}

		th {
			text-align: left;
			padding: 0.5em 1em 0.5em 1em;
			color: #fff;
			background: #222729 url('images/overlay.png');
		}

		thead {
			background: #444;
			color: #fff;
		}

		tfoot {
			background: #eee;
		}
	}

/* Button */

	input[type="button"],
	input[type="submit"],
	input[type="reset"],
	button,
	.button {
		position: relative;
		display: inline-block;
		border-radius: 0.35em;
		color: #fff !important;
		text-decoration: none;
		padding: 0.75em 2.5em 0.75em 2.5em;
		background-color: #8ebebc;
        background-color: #674EA7;
		border: 0;
		cursor: pointer;
		@include vendor('background-image', ('linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))', 'url("images/overlay.png")'));
		@include vendor('transition', 'background-color 0.35s ease-in-out');

		&:hover {
			background-color: #9ececc;
            background-color: #9483C1;
            background-color: #8571B8;
		}

		&:active {
			background-color: #7eaeac;
            background-color: #674EA7;
		}
	}

/* Item */

	.item {
		box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
		margin-bottom: 40px;

		header {
			color: #919394; /*#666;*/
			text-align: center;
			background: #222629; /* #fff;*/
			margin: 0;
			padding: 1em;
			font-size: 0.8em;

			h3 {
				font-size: 1em;
			}
		}
	}

/* Icons */

	.icon {
		@include icon(before);
	}

	.icon-r {
		@include icon(before, regular);
	}

	.icon-b {
		@include icon(before, brands);
	}

/* Header */

	#header {
		@include vendor('display', 'flex');
		@include vendor('flex-direction', 'column');
		@include vendor('justify-content', 'space-between');
		background: #222629 url('images/overlay.png');
		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
		color: #fff;
		height: 100%;
		left: 0;
		overflow-y: auto;
		position: fixed;
		text-align: right;
		top: 0;
		width: 375px;

		.top {
			@include vendor('flex-grow', '1');
		}

		.bottom {
			@include vendor('flex-shrink', '0');
			padding: 1.5em 0 0.75em 0;

			> :last-child {
				margin-bottom: 0;
			}
		}

		.icons {
			font-size: 0.8em;
			text-align: center;

			a {
				color: #41484c;
				@include vendor('transition', 'color 0.35s ease-in-out');

				&:hover {
					color: #fff;
				}
			}
		}
	}

	#logo {
		position: relative;
		margin: 1.75em 1.5em 1.5em 1.5em;
		min-height: 48px;
		cursor: default;

		a {
			border: 0;
		}

		h1 {
			position: relative;
			color: #fff;
			font-weight: 600;
			font-size: 1em;
			line-height: 1em;
		}

		p {
			position: relative;
			display: block;
			font-size: 0.6em;
			color: rgba(255, 255, 255, 0.5);
			line-height: 1.25em;
			margin: 0.5em 0 0 0;
		}

		.image {
			position: absolute;
			left: 0;
			top: 0;
		}
	}
/* ... */

